<resources>
    <string name="app_name">NaviCamp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="col1">Alert ID</string>
    <string name="col2">Name</string>
    <string name="col3">User Type</string>
    <string name="col4">Device ID</string>
    <string name="col5">Coordinates</string>
    <string name="col6">Floor Level</string>
    <string name="col7">Reported Incident Type</string>
    <string name="col8">Status</string>
    <string name="col9">Time of Alert</string>
    <string name="col10">Resolved On</string>

    <string-array name="campus_affiliations">
        <item>Campus Affiliation</item>
        <item>Student</item>
        <item>Employee</item>
    </string-array>

    <string-array name="system_roles_student">
        <item>System Role</item>
        <item>Temporarily Disabled</item>
        <item>Permanently Disabled</item>
    </string-array>

    <string-array name="system_roles_employee">
        <item>System Role</item>
        <item>Temporarily Disabled</item>
        <item>Permanently Disabled</item>
        <item>Safety Officer</item>
    </string-array>

    <string-array name="departments_default">
        <item>Department</item>
    </string-array>

    <string-array name="departments_student">
        <item>Department</item>
        <item>CAS</item>
        <item>CCIS</item>
        <item>CHS</item>
        <item>CMET</item>
        <item>CN</item>
        <item>ETYCB</item>
        <item>MIA</item>
        <item>MITL</item>
        <item>SHS</item>
    </string-array>

    <string-array name="departments_employee">
        <item>Department</item>
        <item>CDMO</item>
        <item>CHSW</item>
        <item>IFO</item>
        <item>Security Services</item>
        <item>CAS</item>
        <item>CCIS</item>
        <item>CHS</item>
        <item>CMET</item>
        <item>CN</item>
        <item>ETYCB</item>
        <item>MIA</item>
        <item>MITL</item>
        <item>SHS</item>
    </string-array>

    <string-array name="filter_types">
        <item>Year</item>
        <item>Month</item>
        <item>Week</item>
        <item>Day</item>
    </string-array>

    <string-array name="user_types_log">
        <item>System Role</item>
        <item>Temporarily Disabled/Permanently Disabled</item>
        <item>Safety Officer</item>
    </string-array>

    <string-array name="registered_user_types">
        <item>All</item>
        <item>Temporarily Disabled</item>
        <item>Permanently Disabled</item>
    </string-array>

    <string-array name="date_types">
        <item>All</item>
        <item>Year</item>
        <item>Month</item>
        <item>Week</item>
        <item>Day</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>